@@ -8,6 +8,10 @@ CHANGE LOG
 
 = 1.2.3.0 =
 * Added additional set of instructor capabilities for Discussions
+* CSS improvements (added better CSS styles on the feature course buttons in the CoursePress theme)
+* Resolved issue with saving course categories
+* Resolved translation issues
+* Other code improvements
 
 = 1.2.2.9 =
 * Added course reordering on courses admin page (drag & drop)
